--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,11 +9,15 @@ jobs:
     steps:
       - name: Checkout Source
         uses: actions/checkout@v3
-      - name: Download Swarm Info From artifact
-        uses: actions/download-artifact@v3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          name: swarm_info
-          path: .
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-1
+      - name: Download Terraform State from S3 Bucket
+        run: |
+          aws s3 cp s3://kha-app-s3/swarm_info/swarm_info.txt .
       - name: Read envs from CI
         id: read_swarm_info
         run: |
