--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,19 +34,12 @@ jobs:
             && echo $FORMAT_TOKEN \
             && echo $SWARM_IP \
             && sudo docker swarm join --token $FORMAT_TOKEN $SWARM_IP:2377"
-      - name: Upload Envs to Artifact
-        uses: actions/upload-artifact@v3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          name: swarm_info
-          path: ./swarm_info.txt
-      - name: Download Artifact file
-        uses: actions/download-artifact@v3
-        with:
-          name: swarm_info
-          path: .
-      - name: Echo Downloaded File
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-1
+      - name: Copy Terraform State to S3 Bucket
         run: |
-          SWARM_INFO=$(cat ./swarm-info.txt)
-          IFS=',' read -ra ADDR <<< "$SWARM_INFO"
-          SWARM_IP=${ADDR[0]}
-          SWARM_USER=${ADDR[1]}
+          aws s3 cp swarm_info.txt s3://kha-app-s3/swarm_info/
