--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,13 +15,16 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-southeast-1
-      - name: Download Terraform State from S3 Bucket
+      - name: Download Docker Info from S3 Bucket
         run: |
           aws s3 cp s3://kha-app-s3/swarm_info/swarm_info.txt .
+      - name: Delete Docker Info on S3 bucket
+        run: |
+          aws s3 rm s3://kha-app-s3/swarm_info/swarm_info.txt
       - name: Read envs from CI
         id: read_swarm_info
         run: |
-          SWARM_INFO=$(cat ./swarm-info.txt)
+          SWARM_INFO=$(cat ./swarm_info.txt)
           IFS=',' read -ra ADDR <<< "$SWARM_INFO"
           SWARM_IP=${ADDR[0]}
           SWARM_USER=${ADDR[1]}
