--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-southeast-1
-      - name: Copy Terraform State to S3 Bucket
+      - name: Copy Docker Info to S3 Bucket
         run: |
           aws s3 cp swarm_info.txt s3://kha-app-s3/swarm_info/
