--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,67 +6,7 @@ on:
       - main
 
 jobs:
-  apply_terraform:
-    runs-on: ubuntu-latest
-    outputs:
-      public_ips: ${{ steps.ids.outputs.public_ips }}
-    steps:
-      - name: Checkout Source
-        uses: actions/checkout@v3
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: "1.1.7"
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-southeast-1
-      - name: Initialize Terraform
-        run: terraform init
-      - name: Apply Terraform
-        run: terraform apply -auto-approve
-      - name: Copy Terraform State to S3 Bucket
-        run: |
-          aws s3 cp terraform.tfstate s3://kha-app-s3/state/
-      - name: Get IPs of instances
-        id: ids
-        run: |
-          ips=$(terraform output -json | jq -r '.instance_ips.value | join(",")')
-          echo "public_ips=$ips" >> "$GITHUB_OUTPUT"
-
-  init_swarm:
-    needs: apply_terraform
-    runs-on: ubuntu-latest
-    outputs:
-      join_token: ${{ steps.init_swarm.outputs.join_token}}
-      swarm_ip: ${{ steps.init_swarm.outputs.swarm_ip }}
-    steps:
-      - name: Checkout Source
-        uses: actions/checkout@v3
-      - name: Add SSH Keys
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-      - name: Init Docker Swarm On Instance 1
-        id: init_swarm
-        run: |
-          IPS="${{ needs.apply_terraform.outputs.public_ips }}"
-          IFS=',' read -ra ADDR <<< "$IPS"
-          SWARM_IP=${ADDR[0]}
-          ssh -tt -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$SWARM_IP "sudo apt-get update \
-            && sudo apt-get install docker.io -y \
-            && sudo systemctl start docker \
-            && sudo systemctl enable docker \
-            && sudo docker swarm init --advertise-addr=$SWARM_IP"
-          JOIN_TOKEN=$(ssh -tt -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$SWARM_IP "sudo docker swarm join-token -q worker")
-          echo "join_token=$JOIN_TOKEN" >> "$GITHUB_OUTPUT"
-          echo "swarm_ip=$SWARM_IP" >> "$GITHUB_OUTPUT"
-
   join-swarm:
-    needs: [apply_terraform,init_swarm]
     runs-on: ubuntu-latest
     steps:
       - name: Add SSH Keys
@@ -77,7 +17,7 @@ jobs:
       - name: Instance 2 joins Docker Swarm
         id: join_swarm
         run: |
-          IPS="${{ needs.apply_terraform.outputs.public_ips }}"
+          IPS="54.169.115.66,13.212.83.159"
           IFS=',' read -ra ADDR <<< "$IPS"
           SWARM_IP=${ADDR[0]}
           JOIN_IP=${ADDR[1]}
