--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,4 +31,4 @@ jobs:
           echo "SWARM_IP=$SWARM_IP" >> $GITHUB_ENV
           echo "SWARM_USER=$SWARM_USER" >> $GITHUB_ENV
       - name: Deploy
-        run: bash ./deploy/deploy.sh ${{env.SWARM_IP}} ${{env.SWARM_USER}} ${{secrets.SSH_PRIVATE_KEY}}
+        run: bash ./deploy/deploy.sh ${{env.SWARM_IP}} ${{env.SWARM_USER}} "${{secrets.SSH_PRIVATE_KEY}}"
